cmake_minimum_required(VERSION 3.10)

#set the project name and vesion.
project(algs_ds)

#specify the c++ standard
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

#add subdirectories.
add_subdirectory(/home/hugostiglitz/mydev/coned_src/udemy/andrein/algs_ds/quick_sort)
add_subdirectory(/home/hugostiglitz/mydev/coned_src/udemy/andrein/algs_ds/hash_table_t)
add_subdirectory(/home/hugostiglitz/mydev/coned_src/udemy/andrein/algs_ds/binary_search_tree)
add_subdirectory(/home/hugostiglitz/mydev/coned_src/udemy/andrein/algs_ds/insertion_sort)
add_subdirectory(/home/hugostiglitz/mydev/coned_src/udemy/andrein/algs_ds/bubble_sort)
